--- a/Design_pattern/pom.xml
+++ b/Design_pattern/pom.xml
@@ -4,21 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.learn</groupId>
     <artifactId>Design_pattern</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-
-    <parent>
-        <groupId>com.learn</groupId>
-        <artifactId>learn</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
 
     <modules>
         <module>Observer_pattern</module>
         <module>Strategy_pattern</module>
         <module>Decorator_pattern</module>
         <module>Factory_pattern</module>
+        <module>Singleton_pattern</module>
     </modules>
 
 </project>
