--- a/Design_pattern/pom.xml
+++ b/Design_pattern/pom.xml
@@ -16,6 +16,8 @@
         <module>Factory_pattern</module>
         <module>Singleton_pattern</module>
         <module>Command_pattern</module>
+        <module>Adapter_pattern</module>
+        <module>Facade_pattern</module>
     </modules>
 
 </project>
