--- a/Dubbo_learn/dubbo_consumer/src/main/resources/application.properties
+++ b/Dubbo_learn/dubbo_consumer/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-#ÅäÖÃ¶Ë¿Ú
+#ï¿½ï¿½ï¿½Ã¶Ë¿ï¿½
 server.port=8334
 
-spring.application.name: dubbo-provider
+spring.application.name: dubbo-consumer
 
 ## Dubbo Registry
 dubbo.registry.address=zookeeper://192.168.136.21:2181
