--- a/Dubbo_learn/dubbo_provider/src/main/resources/application.properties
+++ b/Dubbo_learn/dubbo_provider/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#ÅäÖÃ¶Ë¿Ú
+#ï¿½ï¿½ï¿½Ã¶Ë¿ï¿½
 server.port=8333
 # Spring boot application
 spring.application.name=dubbo-provider
@@ -10,7 +10,7 @@ dubbo.scan.base-packages=com.learn
 ## dubbo.application.name=${spring.application.name}
 
 ## Dubbo Protocol
-#dubbo.protocol.name=zookeeper
+#dubbo.protocol.name=dubbo
 #dubbo.protocol.host=192.168.136.21
 #dubbo.protocol.port=12345
 
