--- a/Simple_Spring_learn/web/WEB-INF/web.xml
+++ b/Simple_Spring_learn/web/WEB-INF/web.xml
@@ -3,6 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>classpath:application.xml</param-value>
+    </context-param>
     <!-- 定义Listener Application Context -->
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
