--- a/SparkSQL_learn/pom.xml
+++ b/SparkSQL_learn/pom.xml
@@ -30,11 +30,11 @@
             <version>2.4.0</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.spark-project.hive/hive-jdbc -->
-        <dependency>
-            <groupId>org.spark-project.hive</groupId>
-            <artifactId>hive-jdbc</artifactId>
-            <version>1.2.1.spark2</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.spark-project.hive</groupId>-->
+<!--            <artifactId>hive-jdbc</artifactId>-->
+<!--            <version>1.2.1.spark2</version>-->
+<!--        </dependency>-->
         <!-- https://mvnrepository.com/artifact/org.apache.hive/hive-jdbc -->
         <dependency>
             <groupId>org.apache.hive</groupId>
