--- a/.gitignore
+++ b/.gitignore
@@ -76,30 +76,110 @@ fabric.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-
-./.idea
-./**/.idea
-./**/*.iml
-./**/.settings
-./**/.project
-#./design_pattern/.idea
-#./design_pattern/*.iml
-#./dubbo_learn/.idea
-#./dubbo_learn/*.iml
-#./elasticsearch_learn/.idea
-#./getOffer/.idea
-#./hadoop_learn/.idea
-#./java_learn/.idea
-#./kafka_learn/.idea
-#./myBatis_learn/.idea
-#./netty_learn/.idea
-#./redis_learn/.idea
-#./scala_learn/.idea
-#./Socket_learn/.idea
-#./Spark_learn/.idea
-#./spring_learn/Simple_Spring_learn/.idea
-#./spring_learn/SpringMVC_learn/.idea
-#./Vert.x_learn/.idea
-#./webSocket_learn/.settings
-#./webSocket_learn/.project
-
+!/.idea/
+!/design_pattern/.idea/
+!/design_pattern/Design_pattern.iml
+!/design_pattern/Adapter_pattern/Adapter_pattern.iml
+!/design_pattern/Adapter_pattern/target/
+!/design_pattern/Command_pattern/target/
+!/design_pattern/Command_pattern/Command_pattern.iml
+!/design_pattern/Decorator_pattern/target/
+!/design_pattern/Decorator_pattern/Decorator_pattern.iml
+!/design_pattern/Facade_pattern/Facade_pattern.iml
+!/design_pattern/Facade_pattern/target/
+!/design_pattern/Factory_pattern/Factory_pattern.iml
+!/design_pattern/Factory_pattern/target/
+!/design_pattern/Observer_pattern/target/
+!/design_pattern/Observer_pattern/Observer_pattern.iml
+!/design_pattern/Singleton_pattern/target/
+!/design_pattern/Singleton_pattern/pom.xml
+!/design_pattern/Strategy_pattern/Strategy_pattern.iml
+!/design_pattern/Strategy_pattern/target/
+!/dubbo_learn/.idea/
+!/dubbo_learn/dubbo_consumer/.mvn/
+!/dubbo_learn/dubbo_consumer/target/
+!/dubbo_learn/dubbo_consumer/dubbo_consumer.iml
+!/dubbo_learn/dubbo_consumer/mvnw.cmd
+!/dubbo_learn/dubbo_consumer/mvnw
+!/dubbo_learn/dubbo_interface/target/
+!/dubbo_learn/dubbo_interface/dubbo_interface.iml
+!/dubbo_learn/dubbo_provider/.mvn/
+!/dubbo_learn/dubbo_provider/mvnw.cmd
+!/dubbo_learn/dubbo_provider/dubbo_provider.iml
+!/dubbo_learn/dubbo_provider/target/
+!/dubbo_learn/dubbo_provider/mvnw
+!/elasticsearch_learn/elasticsearch_learn_original/target/
+!/elasticsearch_learn/elasticsearch_learn_springboot/target/
+!/getOffer/java.util.concurrent.FutureTask.class
+!/getOffer/test.EightSort.class
+!/getOffer/data.out
+!/getOffer/.idea/
+!/getOffer/target/
+!/getOffer/java.lang.reflect.Method.class
+!/hadoop_learn/target/
+!/hadoop_learn/.idea/
+!/hadoop_learn/hadoop_learn.iml
+!/java_learn/Annotation_learn/target/
+!/java_learn/jvm_learn/ReadMe.md
+!/java_learn/jvm_learn/.idea/
+!/java_learn/Reflection_learn/target/
+!/java_learn/source_learn/.idea/
+!/java_learn/source_learn/target/
+!/java_learn/source_learn/source_learn.iml
+!/java_learn/jvm_learn/target/
+!/java_learn/GenericProgramming_learn/target/
+!/kafka_learn/.settings/
+!/kafka_learn/.idea/
+!/kafka_learn/.project
+!/kafka_learn/kafka_learn.iml
+!/kafka_learn/kafka_consumer/target/
+!/kafka_learn/kafka_consumer/.settings/
+!/kafka_learn/kafka_consumer/.project
+!/kafka_learn/kafka_consumer/kafka_consumer.iml
+!/kafka_learn/kafka_producer/kafka_producer.iml
+!/kafka_learn/kafka_producer/.settings/
+!/kafka_learn/kafka_producer/.project
+!/kafka_learn/kafka_producer/target/
+!/myBatis_learn/.idea/
+!/myBatis_learn/target/
+!/myBatis_learn/myBatis_learn.iml
+!/netty_learn/.idea/
+!/netty_learn/target/
+!/netty_learn/netty_webSocket_example/target/
+!/netty_learn/netty_webSocket_example/netty_webSocket_example.iml
+!/redis_learn/target/
+!/redis_learn/.idea/
+!/redis_learn/redis_learn.iml
+!/scala_learn/scala_learn.iml
+!/scala_learn/.idea/
+!/scala_learn/sbt_learn/.idea/
+!/scala_learn/sbt_learn/target/
+!/scala_learn/scalaProject_learn/scalaProject_learn.iml
+!/scala_learn/scalaProject_learn/.idea/
+!/scala_learn/scalaspringboot/mvnw.cmd
+!/scala_learn/scalaspringboot/target/
+!/scala_learn/scalaspringboot/.mvn/
+!/scala_learn/scalaspringboot/scalaspringboot.iml
+!/scala_learn/scalaspringboot/mvnw
+!/scala_learn/scalaspringboot/.idea/
+!/scala_learn/scalaspringboot/HELP.md
+!/Socket_learn/target/
+!/Socket_learn/.idea/
+!/Spark_learn/.idea/
+!/Spark_learn/SparkSQL_learn/spark-warehouse/
+!/Spark_learn/SparkSQL_learn/SparkSQL_learn.iml
+!/Spark_learn/Spark_learn.iml
+!/Spark_learn/SparkSQL_learn/target/
+!/Spark_learn/SparkStreaming_learn/target/
+!/Spark_learn/SparkStreaming_learn/SparkStreaming_learn.iml
+!/Spark_learn/target/
+!/Spark_learn/SparkSQL_learn/derby.log
+!/Spark_learn/SparkSQL_learn/metastore_db/
+!/Spark_learn/spark-warehouse/
+!/Spark_learn/logs/
+!/spring_learn/Simple_Spring_learn/.idea/
+!/spring_learn/Simple_Spring_learn/target/
+!/spring_learn/Simple_Spring_learn/out/
+!/webSocket_learn/.settings/
+!/webSocket_learn/.project
+!/webSocket_learn/target/
